--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==42.0.7
 defusedxml==0.7.1
 Django==4.2.12
 django-allauth==0.57.2
+gunicorn==20.1.0
 idna==3.7
 oauthlib==3.2.2
 pycparser==2.22
@@ -13,5 +14,7 @@ PyJWT==2.8.0
 python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==2.0.0
+setuptools==69.5.1
 sqlparse==0.5.0
 urllib3==2.2.1
+whitenoise==5.3.0
