--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,33 @@
 asgiref==3.8.1
+black==24.4.2
+bleach==6.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 crispy-bootstrap5==0.7
 cryptography==42.0.7
 defusedxml==0.7.1
 Django==4.2.12
 django-allauth==0.57.2
+django-autoslug==1.9.9
 django-crispy-forms==2.1
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 idna==3.7
+mypy-extensions==1.0.0
 oauthlib==3.2.2
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.1
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==2.0.0
 setuptools==69.5.1
+six==1.16.0
 sqlparse==0.5.0
 urllib3==2.2.1
+webencodings==0.5.1
 whitenoise==5.3.0
