--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.7
 crispy-bootstrap5==0.7
 cryptography==42.0.7
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.2.12
 django-allauth==0.57.2
 django-autoslug==1.9.9
@@ -20,6 +21,7 @@ oauthlib==3.2.2
 packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.1
+psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
