--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==4.2.12
 django-allauth==0.57.2
 django-autoslug==1.9.9
 django-crispy-forms==2.1
+django-resized==1.0.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 idna==3.7
@@ -20,6 +21,7 @@ mypy-extensions==1.0.0
 oauthlib==3.2.2
 packaging==24.0
 pathspec==0.12.1
+pillow==10.3.0
 platformdirs==4.2.1
 psycopg2==2.9.9
 pycparser==2.22
