--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cloudinary==1.40.0
 crispy-bootstrap5==0.7
 cryptography==42.0.7
 defusedxml==0.7.1
@@ -12,6 +13,7 @@ dj-database-url==0.5.0
 Django==4.2.12
 django-allauth==0.57.2
 django-autoslug==1.9.9
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
 django-resized==1.0.2
 django-summernote==0.8.20.0
