--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.57.2
 django-autoslug==1.9.9
 django-crispy-forms==2.1
 django-resized==1.0.2
+django-richtextfield==1.6.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
