--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cloudinary==1.36.0
 crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
-Django==4.2.12
+Django==5.0.6
 django-allauth==0.57.2
 django-autoslug==1.9.9
 django-crispy-forms==2.1
@@ -21,5 +21,6 @@ PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
+tzdata==2024.1
 urllib3==1.26.18
 whitenoise==5.3.0
